--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Syed Madany - Web Resume</title>
+    <title>Syed Madany - Portfolio</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -14,7 +14,7 @@
         }
         .container {
             max-width: 800px;
-            margin: 50px auto;
+            margin: 20px auto;
             padding: 20px;
             background-color: #fff;
             border-radius: 8px;
@@ -43,6 +43,11 @@
         a:hover {
             text-decoration: underline;
         }
+        @media screen and (max-width: 600px) {
+            .container {
+                width: 90%;
+            }
+        }
     </style>
 </head>
 <body>
@@ -54,21 +59,23 @@
     <div class="section">
         <h2>About Me</h2>
         <ul>
-            <li>Began career in sales across various industries.</li>
+            <li>Started my career in sales, specializing in various industries.</li>
+            <li>Transitioned into project roles such as cost specialist and coordinator.</li>
             <li>Educational background includes technical roles as a Service and Site Engineer.</li>
-            <li>Transitioned into Sales and Marketing, excelling at translating complex engineering solutions.</li>
+            <li>Excelled in Sales and Marketing, leveraging mechanical engineering expertise.</li>
             <li>Currently focused on Facilities Management, optimizing efficiency and stability.</li>
+            <li>Passionate about creating educational content in mechanical projects and technical concepts.</li>
         </ul>
     </div>
 
     <div class="section">
         <h2>Community and Philanthropy</h2>
-        <p>Dedicated to giving back, associated with Modern Education and Welfare Society / MMF Trust.</p>
+        <p>Associated with Modern Education and Welfare Society / MMF Trust, dedicated to community development.</p>
     </div>
 
     <div class="section">
         <h2>Future Goals</h2>
-        <p>Passionate about contributing to EPC and facility management companies with innovative, sustainable solutions.</p>
+        <p>Committed to contributing innovative, cost-effective, and sustainable solutions to EPC and facility management companies.</p>
     </div>
 
     <div class="section">
@@ -84,6 +91,19 @@
     <div class="section">
         <h2>Let's Elevate Together</h2>
         <p>Join the Accumen Techno community for valuable insights and networking opportunities.</p>
+    </div>
+    
+    <div class="section">
+        <h2>Portfolio Pages</h2>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About Me</a></li>
+            <li><a href="community.html">Community and Philanthropy</a></li>
+            <li><a href="goals.html">Future Goals</a></li>
+            <li><a href="content.html">Explore My Content</a></li>
+            <li><a href="connect.html">Connect and Collaborate</a></li>
+            <li><a href="community.html">Let's Elevate Together</a></li>
+        </ul>
     </div>
 </div>
 
