--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Syed Madany - Portfolio</title>
+    <title>Syed Hilaluddin Madany - Portfolio</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -43,6 +43,12 @@
         a:hover {
             text-decoration: underline;
         }
+        hr {
+            border: 0;
+            height: 1px;
+            background-color: #ccc;
+            margin: 20px 0;
+        }
         @media screen and (max-width: 600px) {
             .container {
                 width: 90%;
@@ -53,45 +59,51 @@
 <body>
 
 <div class="container">
-    <h1>Syed Madany</h1>
-    <p>Hello! I'm a skilled professional with a diverse background in sales, engineering, project management, and facilities management.</p>
+    <h1>Syed Hilaluddin Madany</h1>
+    <p><strong>Summary:</strong> Skilled professional with diverse experience in sales, engineering, project management, and facilities management.</p>
 
     <div class="section">
         <h2>About Me</h2>
         <ul>
-            <li>Started my career in sales, specializing in various industries.</li>
-            <li>Transitioned into project roles such as cost specialist and coordinator.</li>
-            <li>Educational background includes technical roles as a Service and Site Engineer.</li>
-            <li>Excelled in Sales and Marketing, leveraging mechanical engineering expertise.</li>
-            <li>Currently focused on Facilities Management, optimizing efficiency and stability.</li>
+            <li>Proficient in sales across various industries.</li>
+            <li>Experienced in project management, including cost analysis and coordination.</li>
+            <li>Technical background in Service and Site Engineering.</li>
+            <li>Effective in translating complex engineering solutions into customer benefits.</li>
+            <li>Focused on optimizing facility efficiency and stability.</li>
             <li>Passionate about creating educational content in mechanical projects and technical concepts.</li>
         </ul>
     </div>
+    <hr>
 
     <div class="section">
         <h2>Community and Philanthropy</h2>
         <p>Associated with Modern Education and Welfare Society / MMF Trust, dedicated to community development.</p>
     </div>
+    <hr>
 
     <div class="section">
         <h2>Future Goals</h2>
         <p>Committed to contributing innovative, cost-effective, and sustainable solutions to EPC and facility management companies.</p>
     </div>
+    <hr>
 
     <div class="section">
         <h2>Explore My Content</h2>
         <p>Explore insightful content on my <a href="https://www.linkedin.com/in/syedmadany">LinkedIn profile</a>.</p>
     </div>
+    <hr>
 
     <div class="section">
         <h2>Connect and Collaborate</h2>
         <p>Reach out to discuss collaborations or share your thoughts at <a href="mailto:syed.madany86@gmail.com">syed.madany86@gmail.com</a>.</p>
     </div>
+    <hr>
 
     <div class="section">
         <h2>Let's Elevate Together</h2>
         <p>Join the Accumen Techno community for valuable insights and networking opportunities.</p>
     </div>
+    <hr>
     
     <div class="section">
         <h2>Portfolio Pages</h2>
