--- a/index.html
+++ b/index.html
@@ -108,16 +108,16 @@
     <div class="section">
         <h2>Portfolio Pages</h2>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About Me</a></li>
-            <li><a href="community.html">Community and Philanthropy</a></li>
-            <li><a href="goals.html">Future Goals</a></li>
-            <li><a href="content.html">Explore My Content</a></li>
-            <li><a href="connect.html">Connect and Collaborate</a></li>
-            <li><a href="community.html">Let's Elevate Together</a></li>
+            <li><a href="index.html">Home</a> - Introduction to the portfolio.</li>
+            <li><a href="about.html">About Me</a> - Detailed information about my background and experiences.</li>
+            <li><a href="community.html">Community and Philanthropy</a> - Involvement in community development and welfare.</li>
+            <li><a href="goals.html">Future Goals</a> - Aspirations and ambitions for the future.</li>
+            <li><a href="content.html">Explore My Content</a> - Links to insightful content on LinkedIn.</li>
+            <li><a href="connect.html">Connect and Collaborate</a> - Contact information for collaboration opportunities.</li>
+            <li><a href="community.html">Let's Elevate Together</a> - Joining the Accumen Techno community for networking.</li>
         </ul>
     </div>
 </div>
 
 </body>
-</html>
+</html
