--- a/index.html
+++ b/index.html
@@ -3,166 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Syed Hilaluddin Madany - Portfolio</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f8f9fa; /* Light gray background */
-            color: #333; /* Dark text color */
-        }
-        .container {
-            max-width: 800px;
-            margin: 20px auto;
-            padding: 20px;
-            background-color: #fff; /* White container background */
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        h1, h2 {
-            color: #007bff; /* Blue headers */
-        }
-        .section {
-            margin-bottom: 20px;
-        }
-        .section h2 {
-            margin-bottom: 10px;
-        }
-        .section p {
-            margin-bottom: 5px;
-        }
-        .section ul {
-            margin-top: 0;
-            padding-left: 20px;
-        }
-        a {
-            color: #007bff; /* Blue links */
-            text-decoration: none;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-        hr {
-            border: 0;
-            height: 1px;
-            background-color: #ccc; /* Light gray horizontal rule */
-            margin: 20px 0;
-        }
-        .portfolio-links {
-            margin-bottom: 30px;
-        }
-        .portfolio-links ul {
-            list-style-type: none;
-            padding: 0;
-            margin: 0;
-        }
-        .portfolio-links li {
-            margin-bottom: 10px;
-        }
-        .portfolio-links a {
-            display: block;
-            padding: 10px;
-            background-color: #007bff; /* Blue tab background */
-            color: #fff; /* White tab text color */
-            border-radius: 4px;
-            transition: background-color 0.3s;
-        }
-        .portfolio-links a:hover {
-            background-color: #0056b3; /* Darker blue on hover */
-        }
-        .contact-info {
-            margin-bottom: 20px;
-        }
-        .contact-info p {
-            margin: 5px 0;
-        }
-        .profile-image {
-            margin-bottom: 20px;
-            text-align: center;
-        }
-        .profile-image img {
-            border-radius: 50%; /* Round profile image */
-            width: 150px;
-            height: 150px;
-        }
-        @media screen and (max-width: 600px) {
-            .container {
-                width: 90%;
-            }
-        }
-    </style>
+    <title>Traveling the World: From Sales to Facilities Management - My Career Journey</title>
 </head>
 <body>
+    <h1>Traveling the World: From Sales to Facilities Management - My Career Journey</h1>
 
-<div class="container">
-    <h1>Syed Hilaluddin Madany</h1>
-    <div class="portfolio-links">
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About Me</a></li>
-            <li><a href="community.html">Community and Philanthropy</a></li>
-            <li><a href="goals.html">Future Goals</a></li>
-            <li><a href="content.html">Explore My Content</a></li>
-            <li><a href="connect.html">Connect and Collaborate</a></li>
-            <li><a href="blogs.html">Blogs</a></li>
-        </ul>
-    </div>
-    <hr>
+    <h2>About Me</h2>
+    <ul>
+        <li>👋 <strong>Hello!</strong> I began my career in the sales industry, where I honed my communication skills, built strong customer relationships, and helped clients meet their needs.</li>
+        <li>🌍 <strong>Sales Across Industries:</strong> My travels have taken me through various sectors, including Filtration, Mining, Combustion, and Manufacturing. I've ventured beyond sales into project roles such as cost specialist and coordinator, effectively managing budgets, teams, and resources.</li>
+        <li>🛠️ <strong>Technical Expertise:</strong> My educational background includes technical roles as a Service and Site Engineer. I've ensured that complex systems like filters and combustion operate at peak efficiency.</li>
+        <li>📈 <strong>Sales and Marketing Acumen:</strong> Eager for new challenges, I transitioned to Sales and Marketing. As a mechanical engineer, I excel at translating complex engineering solutions into tangible benefits for customers, tailoring each solution to meet their unique requirements.</li>
+        <li>🏢 <strong>Facilities Management:</strong> My career naturally evolved into facilities management, where I applied my background in sales, project management, and engineering. I ensure that every facility I manage is not only functional but optimized for maximum efficiency and stability.</li>
+        <li>🎥 <strong>Content Creation and Education:</strong> Beyond my career, I'm passionate about creating educational content, especially in the realm of mechanical projects and technical concepts. This hobby allows me to share knowledge and learn in a fun way.</li>
+    </ul>
 
-    <div class="contact-info">
-        <p>Email: <a href="mailto:syed.madany86@gmail.com">syed.madany86@gmail.com</a></p>
-        <p>Website: <a href="http://www.accumentechno.com">www.accumentechno.com</a></p>
-    </div>
+    <h2>Community and Philanthropy</h2>
+    <ul>
+        <li>👫 <strong>Dedicated to the Community:</strong> Giving back is a core value. I am associated with Modern Education and Welfare Society / MMF Trust, where we tirelessly work to develop and nurture the community.</li>
+    </ul>
 
-    <div class="profile-image">
-        <!-- Replace 'placeholder.jpg' with your actual image URL -->
-        <img src="placeholder.jpg" alt="Syed Hilaluddin Madany">
-    </div>
+    <h2>Future Goals</h2>
+    <ul>
+        <li>🚀 <strong>Future Career:</strong> As I continue advancing my career, my dedication remains strong. My goal is to contribute to EPC and facility management companies by developing innovative, cost-effective, and sustainable solutions.</li>
+        <li>🤝 <strong>Collaboration:</strong> I'm always open to collaborations with professionals who share my passion for innovation, efficiency, and diverse experiences. Let's explore how our shared enthusiasm can lead to exciting collaborations!</li>
+    </ul>
 
-    <div class="section">
-        <h2>About Me</h2>
-        <ul>
-            <li>Proficient in sales across various industries.</li>
-            <li>Experienced in project management, including cost analysis and coordination.</li>
-            <li>Technical background in Service and Site Engineering.</li>
-            <li>Effective in translating complex engineering solutions into customer benefits.</li>
-            <li>Focused on optimizing facility efficiency and stability.</li>
-            <li>Passionate about creating educational content in mechanical projects and technical concepts.</li>
-        </ul>
-    </div>
-    <hr>
+    <h2>Explore My Content 🌐 📝 Content Writer Extraordinaire</h2>
+    <p>You can explore insightful content on the future of mechanical and educational excellence through the following links:</p>
+    <ul>
+        <li><a href="https://www.linkedin.com/pulse/revolutionizing-mechanical-engineering-through-case-study-madany">Engineering Concepts</a></li>
+        <li><a href="https://www.linkedin.com/pulse/exploring-boon-bane-indian-education-system-focus-teachers-madany">General Insights</a></li>
+    </ul>
+    <p>In addition to creating compelling content that bridges technical complexities with practical insights, I also offer training programs designed to empower teams and elevate their expertise.</p>
 
-    <div class="section">
-        <h2>Community and Philanthropy</h2>
-        <p>Associated with Modern Education and Welfare Society / MMF Trust, dedicated to community development.</p>
-    </div>
-    <hr>
-
-    <div class="section">
-        <h2>Future Goals</h2>
-        <p>Committed to contributing innovative, cost-effective, and sustainable solutions to EPC and facility management companies.</p>
-    </div>
-    <hr>
-
-    <div class="section">
-        <h2>Explore My Content</h2>
-        <p>Explore insightful content on my <a href="https://www.linkedin.com/in/syedmadany">LinkedIn profile</a>.</p>
-    </div>
-    <hr>
-
-    <div class="section">
-        <h2>Connect and Collaborate</h2>
-        <p>Reach out to discuss collaborations or share your thoughts at <a href="mailto:syed.madany86@gmail.com">syed.madany86@gmail.com</a>.</p>
-    </div>
-    <hr>
-
-    <div class="section">
-        <h2>Let's Elevate Together</h2>
-        <p>Join the Accumen Techno community for valuable insights and networking opportunities.</p>
-    </div>
-    <hr>
-</div>
-
+    <h2>Connect and Collaborate</h2>
+    <p>I've honed my skills in MEP operation and maintenance, further enriching my expertise. Together, let's navigate the ever-evolving landscape of Techno-Commercial Facility Management, where innovation drives efficiency, and mechanical excellence reigns supreme. Join me in shaping a brighter future! ✨🔗 #MechanicalEngineering #InnovationInAction #MEPExpertise</p>
+    <p>Reach out to discuss collaborations or share your thoughts. Together, we can make a positive impact in the world of content creation and training.</p>
+    <p>🚀 Let's Elevate Together</p>
+    <p>Join the Accumen Techno Community!</p>
+    <ul>
+        <li>🎓 Join us on YouTube and Telegram for insightful content and discussions.</li>
+        <li>📲 Get access to free e-books on our Telegram channel!</li>
+        <li>🔔 Subscribe, follow, and download for valuable insights that will empower your career journey.</li>
+        <li>🔗 Connect with us on LinkedIn: AccumenTechno for updates and networking opportunities.</li>
+    </ul>
+    <p>🚀 Let's learn and grow together! Join the Accumen Techno community today!</p>
+    <p>Thank you for joining me on this journey. Let's explore, learn, and elevate our skills together!</p>
+    <p>Reach at <a href="mailto:syed.madany86@gmail.com">syed.madany86@gmail.com</a> / <a href="http://www.accumentechno.com">www.accumentechno.com</a></p>
 </body>
 </html>
