--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <body>
     <div class="segment">
         <h1>Syed Hilaluddin Madany - Career Journey</h1>
-        <img src="profile_picture.jpg" alt="Profile Picture">
+        <img src=""C:\Users\DELL\Downloads\Digital Marketer LinkedIn Profile Picture.png"" alt="Profile Picture">
         <p>Telephone: +966 534262974</p>
     </div>
     <div class="double-line"></div>
